--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "main": "index.js",
     "scripts": {
         "deploy": "npm run build&&gh-pages -d build",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "dev": "webpack"
     },
     "keywords": [],
     "author": "",
