--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "deploy": "npm run build&&gh-pages -d build",
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "webpack"
+        "deploy": "npm run build&&gh-pages -d build"
     },
     "keywords": [],
     "author": "",
